<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lyt_frg_city_weather"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lyt_frg_act_permission_denied"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:freezesText="true"
            android:gravity="center"
            android:text="@string/lyt_act_landing_permission_denied"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Sense permissos!!" />

        <TextView
            android:id="@+id/lyt_frg_city_weather_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:freezesText="true"
            android:textColor="@color/text_color_standard"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lyt_frg_city_weather_button"
            tools:text="Terrassa, la capital món mundial" />

        <TextView
            android:id="@+id/lyt_frg_city_weather_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:freezesText="true"
            android:textColor="@color/text_color_standard"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lyt_frg_city_weather_name"
            tools:text="7 de gener, 12:35 PM" />

        <TextView
            android:id="@+id/lyt_frg_city_weather_temp_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:freezesText="true"
            android:text="@string/min_temperature"
            android:textColor="@color/text_color_not_primary"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lyt_frg_city_weather_date"
            tools:text="@string/min_temperature" />

        <TextView
            android:id="@+id/lyt_frg_city_weather_temp_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:freezesText="true"
            android:text="@string/max_temperature"
            android:textColor="@color/text_color_not_primary"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lyt_frg_city_weather_temp_min"
            tools:text="@string/max_temperature" />

        <TextView
            android:id="@+id/lyt_frg_city_weather_feels_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:freezesText="true"
            android:text="@string/feels_like"
            android:textColor="@color/text_color_not_primary"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lyt_frg_city_weather_temp_max"
            tools:text="@string/feels_like" />

        <TextView
            android:id="@+id/lyt_frg_city_weather_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:freezesText="true"
            android:text="@string/atmospheric_pressure"
            android:textColor="@color/text_color_not_primary"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lyt_frg_city_weather_feels_like"
            tools:text="@string/atmospheric_pressure" />

        <TextView
            android:id="@+id/lyt_frg_city_weather_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:freezesText="true"
            android:text="@string/current_weather"
            android:textColor="@color/text_color_not_primary"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lyt_frg_city_weather_pressure"
            tools:text="@string/current_weather" />

        <ImageView
            android:id="@+id/lyt_frg_city_weather_icon"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:freezesText="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lyt_frg_city_weather_description"
            tools:src="@drawable/ic_scattered_clouds" />

        <TextView
            android:id="@+id/lyt_frg_city_weather_no_coordinates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:freezesText="true"
            android:text="@string/not_coordinates"
            android:textColor="@color/text_color_error"
            android:textSize="20sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/not_coordinates" />

        <Button
            android:id="@+id/lyt_frg_city_weather_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:freezesText="true"
            android:text="Anar a la previsió de la cituat"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lyt_frg_city_weather_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>